@@ -11,6 +11,7 @@ CHANGELOG
 * Fix regression on land layer label colors (fixes #980)
 * Fix attached files not shown after file upload/delete (fixes #933)
 * Fix links being removed from trek descriptions (fixes #981)
+* Fix missing thumbnail in trek and POI detail pages
 
 0.22.4 (2014-03-06)
 -------------------
